We added out h1 element to the membership page

--- a/membership.html
+++ b/membership.html
@@ -9,16 +9,19 @@
 <body>
     <nav id="nav__navigation--space-between">
         <a href="#" id="home" class="a__nav__links">home</a>
-        <a href="#" id="nuetrition" class="a__nav__links">nuetrition</a>
+        <a href="#" id="nutrition" class="a__nav__links">nutrition</a>
         <a href="#" id="membership" class="a__nav__links">membership</a>
         <a href="#" id="about" class="a__nav__links">about</a>
     </nav>
 
-    <section>
+    <div id="div__content-box">
+        <section id="sec__content--flex-column">
+            <div><h1>Select A Membership</h1></div>
+        </section>
 
-    </section>
+    </div>
 
-    <footer>
+    <footer >
 
     </footer>
 </body>
