We started preparing out foundation for our members page

--- a/membership.html
+++ b/membership.html
@@ -16,12 +16,63 @@
 
     <div id="div__content-box">
         <section id="sec__content--flex-column">
+
             <div><h1>Select A Membership</h1></div>
+
+            <div id="div__members-top" class="div__members-content">
+
+                <section id="sec__content-boxes--left" class="sec__content--flex-row">
+
+                    <section class="sec__content--members-info">
+                        <h2 class="sec__content-headers">Peak Results</h2>
+
+                        <section class="sec__content-price">
+                            <div><img src="#" class="img__dollar-sign">$</div>
+                            <div><p class="p__content-header-price--large">29</p></div>
+                            <div><p class="p__content-header-price--small">99</p></div>
+                        </section>
+
+                        <section class="sec__content-price--extra">
+                            <div><p>Monthly Recurring Payment</p></div>
+                            <div class="div__decoration-bar"></div>
+                            <div><p>ACCESS TO X CLUBS</p></div>
+                            <div class="div__decoration-bar"></div>
+                        </section>
+
+                    </section>
+
+                    <div class="div__link-box">
+                        <a href="#" style="text-decoration: none; color: black">Learn More</a>
+                    </div>
+
+                </section>
+
+                <section></section>
+                <section></section>
+
+            </div>
+
+            <div id="div__memebers-bottom" class="div__members-content">
+
+                <section>
+                    <div><h3>INCLUDES</h3></div>
+                    <div>
+                        <p class="p__members-info--text"></p>
+                    </div>
+                </section>
+
+                <section></section>
+                <section></section>
+
+            </div>
         </section>
 
     </div>
 
-    <footer >
-
+    <footer>
+        <section>
+            <h4></h4>
+            <p></p>
+        </section>
     </footer>
 </body>
