We added more section elements to the mambers page

--- a/membership.html
+++ b/membership.html
@@ -55,10 +55,31 @@
             <div id="div__memebers-bottom" class="div__members-content">
 
                 <section>
-                    <div><h3>INCLUDES</h3></div>
-                    <div>
-                        <p class="p__members-info--text"></p>
-                    </div>
+                    <section>
+                        <div><h3>INCLUDES</h3></div>
+                        <div><p class="p__members-info--text">Cardio, Weights, & Machines</p></div>
+                        <div><p class="p__members-info--text">Locker Rooms with Shower</p></div>
+                        <div><p class="p__members-info--text">CrunchONE Kickoff</p></div>
+                        <div><p class="p__members-info--text">Online Nutrition Program</p></div>
+                        <div><p class="p__members-info--text">Power Half Hour Circuit Training</p></div>
+                        <div><p class="p__members-info--text">Group Fitness Classes</p></div>
+                        <div><p class="p__members-info--text">HydroMassage</p></div>
+                        <div><p class="p__members-info--text">Tanning</p></div>
+                        <div><p class="p__members-info--text">The HIITZONE</p></div>
+                        <div><p class="p__members-info--text">Guest Privileges</p></div>
+                        <div><p class="p__members-info--text">Ride Classes</p></div>
+                        <div><p class="p__members-info--text">Free T-shirt</p></div>
+                        <div><p class="p__members-info--text">Hot Yoga</p></div>
+                    </section>
+
+                    <section>
+                        <div><h3></h3></div>
+                        <div><p></p></div>
+                    </section>
+
+                    <section>
+                        <div><p></p></div>
+                    </section>
                 </section>
 
                 <section></section>
