We finished setting up all the classes and ids for this page.

--- a/membership.html
+++ b/membership.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Membership</title>
-    <link rel="#">
+    <link rel="stylesheet" href="#">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div id="div__content-box">
         <section id="sec__content--flex-column">
 
-            <div><h1>Select A Membership</h1></div>
+            <div id="div__main-header-box"><h1 id="div__main-header">Select A Membership</h1></div>
 
             <div id="div__members-top" class="div__members-content">
 
@@ -27,22 +27,22 @@
                         <h2 class="sec__content-headers">Peak Results</h2>
 
                         <section class="sec__content-price">
-                            <div><img src="#" class="img__dollar-sign">$</div>
-                            <div><p class="p__content-header-price--large">29</p></div>
-                            <div><p class="p__content-header-price--small">99</p></div>
+                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign">$</div>
+                            <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
+                            <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
 
                         <section class="sec__content-price--extra">
-                            <div><p>Monthly Recurring Payment</p></div>
+                            <div class="p__payment-header-box"><p class="p__payment-header">Monthly Recurring Payment</p></div>
                             <div class="div__decoration-bar"></div>
-                            <div><p>ACCESS TO X CLUBS</p></div>
+                            <div class="p__access-header-box"><p class="p__access-header">ACCESS TO X CLUBS</p></div>
                             <div class="div__decoration-bar"></div>
                         </section>
 
                     </section>
 
                     <div class="div__link-box">
-                        <a href="#" style="text-decoration: none; color: black">Learn More</a>
+                        <a href="#" class="a__links" style="text-decoration: none; color: black">Learn More</a>
                     </div>
 
                 </section>
@@ -52,35 +52,44 @@
 
             </div>
 
-            <div id="div__memebers-bottom" class="div__members-content">
+            <div id="div__members-bottom" class="div__members-content">
 
-                <section>
-                    <section>
-                        <div><h3>INCLUDES</h3></div>
-                        <div><p class="p__members-info--text">Cardio, Weights, & Machines</p></div>
-                        <div><p class="p__members-info--text">Locker Rooms with Shower</p></div>
-                        <div><p class="p__members-info--text">CrunchONE Kickoff</p></div>
-                        <div><p class="p__members-info--text">Online Nutrition Program</p></div>
-                        <div><p class="p__members-info--text">Power Half Hour Circuit Training</p></div>
-                        <div><p class="p__members-info--text">Group Fitness Classes</p></div>
-                        <div><p class="p__members-info--text">HydroMassage</p></div>
-                        <div><p class="p__members-info--text">Tanning</p></div>
-                        <div><p class="p__members-info--text">The HIITZONE</p></div>
-                        <div><p class="p__members-info--text">Guest Privileges</p></div>
-                        <div><p class="p__members-info--text">Ride Classes</p></div>
-                        <div><p class="p__members-info--text">Free T-shirt</p></div>
-                        <div><p class="p__members-info--text">Hot Yoga</p></div>
+                <div id="div__content-boxes--left" class="div__content-boxes--clex-row">
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__header-box"><h3>INCLUDES</h3></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Cardio, Weights, & Machines</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Locker Rooms with Shower</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">CrunchONE Kickoff</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Online Nutrition Program</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Power Half Hour Circuit Training</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Group Fitness Classes</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">HydroMassage</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Tanning</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">The HIITZONE</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Guest Privileges</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Ride Classes</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Free T-shirt</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Hot Yoga</p></div>
+
                     </section>
 
-                    <section>
-                        <div><h3></h3></div>
-                        <div><p></p></div>
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__header-box"><h3>AVAILABLE ADD-ONS</h3></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Crunch+ Streaming Workouts</p></div>
+
                     </section>
 
-                    <section>
-                        <div><p></p></div>
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Plus a $2.25 recurring monthly processing fee. An annual fee will be billed once per year. </p></div>
+
                     </section>
-                </section>
+
+                </div>
 
                 <section></section>
                 <section></section>
@@ -91,9 +100,9 @@
     </div>
 
     <footer>
-        <section>
-            <h4></h4>
-            <p></p>
+        <section id="footer__sec__logo-rights">
+            <div id="div__logo-box"><h4 id="h4__logo"></h4></div>
+            <div id="div__rights-box"><p id="p__rights"></p></div>
         </section>
     </footer>
 </body>
