We started formating the nav bar.

--- a/membership.html
+++ b/membership.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Membership</title>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="./membership.css">
 </head>
 
 <body>
     <nav id="nav__navigation--space-between">
         <a href="#" id="home" class="a__nav__links">home</a>
         <a href="#" id="nutrition" class="a__nav__links">nutrition</a>
-        <a href="#" id="membership" class="a__nav__links">membership</a>
+        <a href="./membership.html" id="membership" class="a__nav__links">membership</a>
         <a href="#" id="about" class="a__nav__links">about</a>
     </nav>
 
@@ -42,7 +42,7 @@
                     </section>
 
                     <div class="div__link-box">
-                        <a href="#" class="a__links" style="text-decoration: none; color: black">Learn More</a>
+                        <a href="#" class="a__links" style="text-decoration: none; color: white">Learn More</a>
                     </div>
 
                 </section>
