--- a/membership.html
+++ b/membership.html
@@ -19,7 +19,7 @@
 
             <div id="div__main-header-box"><h1 id="div__main-header">Select A Membership</h1></div>
 
-            <div id="div__members-top" class="div__members-content">
+            <div id="div__members-top-box" class="div__members-content-box">
 
                 <section id="sec__content-boxes--left" class="sec__content--flex-row">
 
@@ -47,8 +47,57 @@
 
                 </section>
 
-                <section></section>
-                <section></section>
+                <section id="sec__content-boxes--left" class="sec__content--flex-row">
+
+                    <section class="sec__content--members-info">
+                        <h2 class="sec__content-headers">Peak Results</h2>
+
+                        <section class="sec__content-price">
+                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign">$</div>
+                            <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
+                            <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
+                        </section>
+
+                        <section class="sec__content-price--extra">
+                            <div class="p__payment-header-box"><p class="p__payment-header">Monthly Recurring Payment</p></div>
+                            <div class="div__decoration-bar"></div>
+                            <div class="p__access-header-box"><p class="p__access-header">ACCESS TO X CLUBS</p></div>
+                            <div class="div__decoration-bar"></div>
+                        </section>
+
+                    </section>
+
+                    <div class="div__link-box">
+                        <a href="#" class="a__links" style="text-decoration: none; color: white">Learn More</a>
+                    </div>
+
+                </section>
+
+                <section id="sec__content-boxes--left" class="sec__content--flex-row">
+
+                    <section class="sec__content--members-info">
+                        <h2 class="sec__content-headers">Peak Results</h2>
+
+                        <section class="sec__content-price">
+                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign">$</div>
+                            <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
+                            <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
+                        </section>
+
+                        <section class="sec__content-price--extra">
+                            <div class="p__payment-header-box"><p class="p__payment-header">Monthly Recurring Payment</p></div>
+                            <div class="div__decoration-bar"></div>
+                            <div class="p__access-header-box"><p class="p__access-header">ACCESS TO X CLUBS</p></div>
+                            <div class="div__decoration-bar"></div>
+                        </section>
+
+                    </section>
+
+                    <div class="div__link-box">
+                        <a href="#" class="a__links" style="text-decoration: none; color: white">Learn More</a>
+                    </div>
+
+                </section>
 
             </div>
 
