--- a/membership.html
+++ b/membership.html
@@ -24,10 +24,10 @@
                 <section id="sec__content-boxes--left" class="sec__content--flex-column">
 
                     <section class="sec__content--members-info">
-                        <h2 class="sec__content-headers">Peak Results</h2>
+                        <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
-                        <section class="sec__content-price">
-                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign">$</div>
+                        <section class="sec__content-price-box">
+                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign"></div>
                             <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
                             <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
@@ -50,10 +50,10 @@
                 <section id="sec__content-boxes--middle" class="sec__content--flex-column">
 
                     <section class="sec__content--members-info">
-                        <h2 class="sec__content-headers">Peak Results</h2>
+                        <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
-                        <section class="sec__content-price">
-                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign">$</div>
+                        <section class="sec__content-price-box">
+                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign"></div>
                             <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
                             <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
@@ -76,10 +76,10 @@
                 <section id="sec__content-boxes--right" class="sec__content--flex-column">
 
                     <section class="sec__content--members-info">
-                        <h2 class="sec__content-headers">Peak Results</h2>
+                        <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
-                        <section class="sec__content-price">
-                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign">$</div>
+                        <section class="sec__content-price-box">
+                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign"></div>
                             <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
                             <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
