We fixed the alignment with the price content.

--- a/membership.html
+++ b/membership.html
@@ -27,7 +27,7 @@
                         <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
                         <section class="sec__content-price-box">
-                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign"></div>
+                            <div class="img__dollar-sign-box"><p class="p__dollar-sign">$</p></div>
                             <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
                             <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
@@ -53,7 +53,7 @@
                         <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
                         <section class="sec__content-price-box">
-                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign"></div>
+                            <div class="img__dollar-sign-box"><p class="p__dollar-sign">$</p></div>
                             <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
                             <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
@@ -79,7 +79,7 @@
                         <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
                         <section class="sec__content-price-box">
-                            <div class="img__dollar-sign-box"><img src="#" class="img__dollar-sign"></div>
+                            <div class="img__dollar-sign-box"><p class="p__dollar-sign">$</p></div>
                             <div class="p__content-header-price--large-box"><p class="p__content-header-price--large">29</p></div>
                             <div class="p__content-header-price--small-box"><p class="p__content-header-price--small">99</p></div>
                         </section>
