We finished formatting the members page. Next is adding the colors.

--- a/membership.html
+++ b/membership.html
@@ -103,11 +103,11 @@
 
             <div id="div__members-bottom" class="div__members-content">
 
-                <div id="div__content-boxes--left" class="div__content-boxes--clex-row">
+                <div id="div__content-boxes--left" class="div__content-boxes--flex-rows-box">
 
                     <section class="sec__membership-info--flex-col">
 
-                        <div class="div__header-box"><h3>INCLUDES</h3></div>
+                        <div class="div__header-box"><p class="div__h3__header">INCLUDES</p></div>
                         <div class="div__membership-extras-box"><p class="p__members-info--text">Cardio, Weights, & Machines</p></div>
                         <div class="div__membership-extras-box"><p class="p__members-info--text">Locker Rooms with Shower</p></div>
                         <div class="div__membership-extras-box"><p class="p__members-info--text">CrunchONE Kickoff</p></div>
@@ -126,7 +126,7 @@
 
                     <section class="sec__membership-info--flex-col">
 
-                        <div class="div__header-box"><h3>AVAILABLE ADD-ONS</h3></div>
+                        <div class="div__header-box"><p class="div__h3__header">AVAILABLE ADD-ONS</p></div>
                         <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
                         <div class="div__membership-extras-box"><p class="p__members-info--text">Crunch+ Streaming Workouts</p></div>
 
@@ -140,8 +140,80 @@
 
                 </div>
 
-                <section></section>
-                <section></section>
+                <div id="div__content-boxes--middle" class="div__content-boxes--flex-rows-box">
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__header-box"><p class="div__h3__header">INCLUDES</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Cardio, Weights, & Machines</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Locker Rooms with Shower</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">CrunchONE Kickoff</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Online Nutrition Program</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Power Half Hour Circuit Training</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Group Fitness Classes</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">HydroMassage</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Tanning</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">The HIITZONE</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Guest Privileges</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Ride Classes</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Free T-shirt</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Hot Yoga</p></div>
+
+                    </section>
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__header-box"><p class="div__h3__header">AVAILABLE ADD-ONS</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Crunch+ Streaming Workouts</p></div>
+
+                    </section>
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Plus a $2.25 recurring monthly processing fee. An annual fee will be billed once per year. </p></div>
+
+                    </section>
+
+                </div>
+
+                <div id="div__content-boxes--right" class="div__content-boxes--flex-rows-box">
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__header-box"><p class="div__h3__header">INCLUDES</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Cardio, Weights, & Machines</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Locker Rooms with Shower</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">CrunchONE Kickoff</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Online Nutrition Program</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Power Half Hour Circuit Training</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Group Fitness Classes</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">HydroMassage</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Tanning</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">The HIITZONE</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Guest Privileges</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Ride Classes</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Free T-shirt</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Hot Yoga</p></div>
+
+                    </section>
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__header-box"><p class="div__h3__header">AVAILABLE ADD-ONS</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Crunch+ Streaming Workouts</p></div>
+
+                    </section>
+
+                    <section class="sec__membership-info--flex-col">
+
+                        <div class="div__membership-extras-box"><p class="p__members-info--text">Plus a $2.25 recurring monthly processing fee. An annual fee will be billed once per year. </p></div>
+
+                    </section>
+
+                </div>
+
 
             </div>
         </section>
@@ -150,8 +222,8 @@
 
     <footer>
         <section id="footer__sec__logo-rights">
-            <div id="div__logo-box"><h4 id="h4__logo"></h4></div>
-            <div id="div__rights-box"><p id="p__rights"></p></div>
+            <div id="div__logo-box"><p id="h4__logo">CRUNCH FITNESS</p></div>
+            <div id="div__rights-box"><p id="p__rights">ALL RIGHTS RESERVED</p></div>
         </section>
     </footer>
 </body>
