We fixed some issues with the formating in the bottom row.

--- a/membership.html
+++ b/membership.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Membership</title>
@@ -124,7 +124,7 @@
 
                         </section>
 
-                        <section class="sec__membership-info--flex-col">
+                        <section class="sec__add-ons-info--flex-col">
 
                             <div class="div__header-box"><p class="div__h3__header">AVAILABLE ADD-ONS</p></div>
                             <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
@@ -132,7 +132,7 @@
 
                         </section>
 
-                        <section class="sec__membership-info--flex-col">
+                        <section class="sec__fees-info--flex-col">
 
                             <div class="div__membership-extras-box"><p class="p__members-info--text">Plus a $2.25 recurring monthly processing fee. An annual fee will be billed once per year. </p></div>
 
@@ -161,7 +161,7 @@
 
                         </section>
 
-                        <section class="sec__membership-info--flex-col">
+                        <section class="sec__add-ons-info--flex-col">
 
                             <div class="div__header-box"><p class="div__h3__header">AVAILABLE ADD-ONS</p></div>
                             <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
@@ -169,7 +169,7 @@
 
                         </section>
 
-                        <section class="sec__membership-info--flex-col">
+                        <section class="sec__fees-info--flex-col">
 
                             <div class="div__membership-extras-box"><p class="p__members-info--text">Plus a $2.25 recurring monthly processing fee. An annual fee will be billed once per year. </p></div>
 
@@ -198,7 +198,7 @@
 
                         </section>
 
-                        <section class="sec__membership-info--flex-col">
+                        <section class="sec__add-ons-info--flex-col">
 
                             <div class="div__header-box"><p class="div__h3__header">AVAILABLE ADD-ONS</p></div>
                             <div class="div__membership-extras-box"><p class="p__members-info--text">Personal Training</p></div>
@@ -206,7 +206,7 @@
 
                         </section>
 
-                        <section class="sec__membership-info--flex-col">
+                        <section class="sec__fees-info--flex-col">
 
                             <div class="div__membership-extras-box"><p class="p__members-info--text">Plus a $2.25 recurring monthly processing fee. An annual fee will be billed once per year. </p></div>
 
