We add another font style, add colors to the members page.

--- a/membership.html
+++ b/membership.html
@@ -8,16 +8,16 @@
 
     <body>
         <nav id="nav__navigation--space-between">
-            <a href="#" id="home" class="a__nav__links">home</a>
-            <a href="#" id="nutrition" class="a__nav__links">nutrition</a>
-            <a href="./membership.html" id="membership" class="a__nav__links">membership</a>
-            <a href="#" id="about" class="a__nav__links">about</a>
+            <a href="#" id="home" class="a__nav__links">HOME</a>
+            <a href="#" id="nutrition" class="a__nav__links">NUTRITION</a>
+            <a href="./membership.html" id="membership" class="a__nav__links">MEMBERSHIP</a>
+            <a href="#" id="about" class="a__nav__links">ABOUT</a>
         </nav>
 
         <div id="div__content-box">
             <section id="sec__content--flex-column">
 
-                <div id="div__main-header-box"><h1 id="div__main-header">Select A Membership</h1></div>
+                <div id="div__main-header-box"><h1 id="div__main-header">Select a Membership</h1></div>
 
                 <div id="div__members-top-box" class="div__members-content-flex-row">
 
@@ -42,7 +42,7 @@
                         </section>
 
                         <div class="div__link-box">
-                            <a href="#" class="a__links" style="text-decoration: none; color: white">Learn More</a>
+                            <a href="#" class="a__links" style="text-decoration: none; color: white">SELECT</a>
                         </div>
 
                     </section>
@@ -68,7 +68,7 @@
                         </section>
 
                         <div class="div__link-box">
-                            <a href="#" class="a__links" style="text-decoration: none; color: white">Learn More</a>
+                            <a href="#" class="a__links" style="text-decoration: none; color: white">SELECT</a>
                         </div>
 
                     </section>
@@ -94,7 +94,7 @@
                         </section>
 
                         <div class="div__link-box">
-                            <a href="#" class="a__links" style="text-decoration: none; color: white">Learn More</a>
+                            <a href="#" class="a__links" style="text-decoration: none; color: white">SELECT</a>
                         </div>
 
                     </section>
@@ -222,7 +222,7 @@
 
         <footer>
             <section id="footer__sec__logo-rights">
-                <div id="div__logo-box"><p id="h4__logo">CRUNCH FITNESS</p></div>
+                <div id="div__logo-box"><p id="h4__logo">© CRUNCH FITNESS</p></div>
                 <div id="div__rights-box"><p id="p__rights">ALL RIGHTS RESERVED</p></div>
             </section>
         </footer>
