We fixed the grey border, replaced the dark blue border with a box to add the linear gradient background to it, and made the select box wider.

--- a/membership.html
+++ b/membership.html
@@ -24,6 +24,7 @@
                     <section id="sec__content-boxes--left" class="sec__content--flex-column">
 
                         <section class="sec__content--members-info">
+                            <div id="div__sub-border-block--gradient-blue--left"></div>
                             <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
                             <section class="sec__content-price-box">
@@ -50,6 +51,7 @@
                     <section id="sec__content-boxes--middle" class="sec__content--flex-column">
 
                         <section class="sec__content--members-info">
+                            <div id="div__sub-border-block--gradient-blue--middle"></div>
                             <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
                             <section class="sec__content-price-box">
@@ -76,6 +78,7 @@
                     <section id="sec__content-boxes--right" class="sec__content--flex-column">
 
                         <section class="sec__content--members-info">
+                            <div id="div__sub-border-block--gradient-blue--right"></div>
                             <div class="sec__content-headers-box"><h2 class="sec__content-headers">Peak Results</h2></div>
 
                             <section class="sec__content-price-box">
