We added animations for the other two select boxes with different color gradients.

--- a/membership.html
+++ b/membership.html
@@ -42,7 +42,7 @@
 
                         </section>
 
-                        <div class="div__link-box">
+                        <div id="div__link-box-left" class="div__link-box">
                             <a href="#" class="a__links" style="text-decoration: none; color: white">SELECT</a>
                         </div>
 
@@ -69,7 +69,7 @@
 
                         </section>
 
-                        <div class="div__link-box">
+                        <div id="div__link-box-middle" class="div__link-box">
                             <a href="#" class="a__links" style="text-decoration: none; color: white">SELECT</a>
                         </div>
 
@@ -96,7 +96,7 @@
 
                         </section>
 
-                        <div class="div__link-box">
+                        <div id="div__link-box-right" class="div__link-box">
                             <a href="#" class="a__links" style="text-decoration: none; color: white">SELECT</a>
                         </div>
 
